--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div class="container">
         <!-- welcome section -->
         <section id="welcome-section">
-            <h1>Hey I am Sophia</h1>
+            <h1>Hey I am Terry</h1>
             <p><i>a web developer</i></p>
+             <small><a href="https://drive.google.com/file/d/1Cu2YBQ2j59vB6MSzUS3fEs1lNY4RWsTr/view?usp=sharing" target="_blank">Resume</a></small>
         </section>
 
         <!-- projects section  -->
@@ -124,7 +125,7 @@
         <p>
             **This is just a placeholder until I learn more and make a more responsive site ❤️.
         </p>
-        <span>© Created for freeCodeCamp with love by Sophia</span>
+        <span>© Created for freeCodeCamp with love by Terry</span>
     </footer>
 </body>
 
